adding the html structure for filtre by category function

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
                     <div class="users" id="users">
                     </div>
                 </div>
+                <div class="filter-section">
+                    <h3>Filter by Category</h3>
+                    <select id="category-filter">
+                        <option value="all">All</option>
+                        
+                    </select>
+                </div>
             </div>
         </div>
         <input type="file" id="P1">
