--- a/index.html
+++ b/index.html
@@ -81,10 +81,23 @@
                     </div>
                 </div>
                 
+            <div class="wrapper-add">
+                <div class="form">
+                    <label for="image_input" id="label-img"><img src="/gallery.png" width="50%" alt=""></label>
+                    <input type="file" id="image_input">
+                    <input type="text" id="title_input">
+                    <input type="text" id="title2_input">
+                    <input type="text" id="description_input">
+                    <input type="text" id="made_input">
+                    <input type="text" id="likes_input">
+                    <input type="text" id="user_input">
+                    <button id="send">send</button>
                 </div>
             </div>
+           </div>
         </div>
-        <input type="file" id="P1">
+    </div>
+        <!-- <input type="file" id="P1">
         <input type="text" id="P2">
         <input type="text" id="P3">
         <input type="text" id="P4">
@@ -93,7 +106,7 @@
         <input type="text" id="P7">
         <input type="file" id="P8">
         <input type="text" id="P9">
-        <button id="send">send</button>
+        <button id="send">send</button> --->
     </div>
 
 
