--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="navbar navbar-expand-md navbar-dark px-4 py-2 ">
         <div class="container">
                 <div class="navbar-brand ">
-                    <img src="/pngwing.com (1).png" width="100px" alt="">
+                    <img src="images/logo.png" width="100px" alt="">
                 </div>
 
             <button 
@@ -25,7 +25,7 @@
 
            <div class="collapse navbar-collapse" id="mainmenu">
             <div id="search" >
-                <button><img src="/search.png" width="16px" height="16px" alt=""></button>
+                <button><img src="icons/search.png" width="16px" height="16px" alt=""></button>
                 <input class=" mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="input-search">
             </div>
             <ul class="navbar-nav ms-auto">
@@ -56,7 +56,6 @@
                                 <h3>Filter by Category</h3>
                                 <select id="category-filter">
                                     <option value="all">All</option>
-                                    
                                 </select>
                         </a>
                         
@@ -82,14 +81,14 @@
                 </div>
                 <div class="wrapper-add">
                     <div class="form">
-                        <label for="image_input" id="label-img"><img src="/gallery.png" width="50%" alt=""></label>
+                        <label for="image_input" id="label-img"><img src="images/gallery.png" width="50%" alt=""></label>
                         <input type="file" id="image_input">
-                        <input type="text" id="title_input">
-                        <input type="text" id="title2_input">
-                        <input type="text" id="description_input">
-                        <input type="text" id="made_input">
+                        <input type="text" id="title_input" placeholder="Enter Title">
+                        <input type="text" id="title2_input" placeholder="Enter Subtitle ">
+                        <input type="text" id="description_input" placeholder="Enter Description">
+                        <input type="text" id="made_input" placeholder="Enter the Made of Recipe">
                         <input type="text" id="likes_input">
-                        <input type="text" id="user_input">
+                        <input type="text" id="user_input" placeholder="Enter your full-Name ">
                         <button id="send">send</button>
                     </div>
                 </div>
@@ -106,6 +105,26 @@
         <input type="file" id="P8">
         <input type="text" id="P9">
         <button id="send">send</button> -->
+    </div>
+
+    <div class="show-card">
+        <div class="wrapper-show-card">
+            <div class="t-img">
+                <img src="ropa.jpeg" width="100%" alt="">
+            </div>
+            <div class="titre">
+                <h5 id="t1">the creame marocain</h5>
+                <h5 id="t2">salad perry</h5>
+                <h5 id="t3">made in morroco</h5>
+                <h5 id="t4">like <span id="t4-like">230</span></h5>
+                <div class="show-comments">
+                    <p>Most Comments</p>
+                    <h1>the best food</h1>
+                    <h1>the best food</h1>
+                    <h1>the best food</h1>
+                </div>
+            </div>
+        </div>
     </div>
 
 
