--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
             </div>
         </div>
     </div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center" >
+            <li class="page-item" id="previous-button">
+                <a class="page-link custom-previous-button " href="#">Précédent</a>
+            </li>
+            <li class="page-item"><a class="page-link custom-page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link custom-page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link custom-page-link" href="#">3</a></li>
+            <li class="page-item" id="next-button">
+                <a class="page-link custom-next-button" href="#">Suivant</a>
+            </li>
+        </ul>
+    </nav>
 
 
 
