--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>O</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="navbar navbar-expand-md navbar-dark px-4 py-2 ">
         <div class="container">
                 <div class="navbar-brand ">
