I added modification of all

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>O</title>
+    <link rel="icon" href="images/logo.png" type="image/icon type">
+    <title>SOUMA FOOD</title>
 </head>
 
 <body>
-    <header id="header">
+
+    <div class="alert alert-primary" id="alert">
+        <h1 class="message"><img src="icons/checked.png" width="20px" alt=""> the recipe added with success</h1>
+        <p id="p-close">X</p>
+    </div>
+
+    <header>
         <div class="navbar navbar-expand-md navbar-dark px-4 py-2 ">
             <div class="container">
                 <div class="navbar-brand ">
@@ -42,12 +49,10 @@
     <div class="section-navbar-main">
         <div class="wrapper-main-navbar">
             <ul class="list-a">
-                <li><a href="">All</a></li>
+                <li><a href="" id="all">All</a></li>
                 <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
+                <li><a href="">About</a></li>
+
             </ul>
             <div id="drop">
                 <div class="dropdown">
@@ -62,7 +67,7 @@
             </div>
         </div>
         <div class="views">
-            <h1>You have <span id="all-views"> 22.038k </span> to Recipes Explore</h1>
+            <h1>You have <span id="all-views"></span> to Recipes Explore</h1>
         </div>
     </div>
     <div class="pagin">
@@ -105,6 +110,7 @@
         </div>
        
     </div>
+
     <div class="w3-center w3-padding-32" id="numero">
         <div class="w3-bar ">
             <a href="#" id="previous-button" class="w3-bar-item w3-button w3-hover-black">&laquo;</a>
@@ -120,7 +126,7 @@
             <a href="#" id="next-button" class="w3-bar-item w3-button w3-hover-black">&raquo;</a>
         </div>
     </div>
-</div>
+    </div>
  
     
     <!-- <input type="file" id="P1">
