Add a feature to the button ADD RECIPES

--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,9 @@
                     More than <span>15,000 recipes </span>from around the world </p>
             </div>
             <div>
-                <button id="btnAdd">ADD RECIPES</button>
+                <a href="index.html#form-section"><button id="btnAdd">ADD RECIPES</button></a>
+                
+   
             </div>
 
         </div>
@@ -78,7 +80,7 @@
     </section>
 
 
-    <script src="Script.js"></script>
+    <script>src="script.js"</script>
 </body>
 
 </html>
