--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="users" id="users">
                     </div>
                 </div>
-                <div class="wrapper-add">
+                <div class="wrapper-add" id="form-section">
                     <div class="form">
                         <label for="image_input" id="label-img"><img src="images/gallery.png" width="50%" alt=""></label>
                         <input type="file" id="image_input">
