--- a/Home.html
+++ b/Home.html
@@ -39,37 +39,33 @@
 
     <section>
 
-        <div class=container>
-            <div id="part">
-                <h1 class=titre>Health Requires</h1>
-                <h1 class=titre>Healthy food</h1>
-                <p><br>Manage your recipes the easy way </p>
-                <p>Share recipes with your friends and discover new ones.<br>
-                    More than <span>15,000 recipes </span>from around the world </p>
+        <div class="container">
+            <div id="part" class="text-center mt-5">
+                <h1 class="titre display-1" style="font-size: 65px; margin: 0;" >Health Requires</h1>
+                <h1 class="titre display-1" style="font-size: 65px; margin: 0;">Healthy food</h1>
+                <p class="mt-3">Manage your recipes the easy way.<br><br> Share recipes with your friends and discover new ones.<br>
+                    More than <span>15,000 recipes</span> from around the world.</p>
             </div>
             <div>
                 <a href="index.html#form-section"><button id="btnAdd">ADD RECIPES</button></a>
-                
-   
             </div>
-
         </div>
 
         <div class="images">
             <div>
-                <img class="img" src="images/téléchargement.jfif">
+                <img class="img" src="images/ropa1.jpg">
             </div>
             <div>
-                <img class="img" src="images/téléchargement.jfif">
+                <img class="img" src="images/ropa2.jpg">
             </div>
             <div>
-                <img class="img" src="images/téléchargement.jfif">
+                <img class="img" src="images/ropa3.jpg">
             </div>
             <div>
-                <img class="img" src="images/téléchargement.jfif">
+                <img class="img" src="images/ropa4.jpg">
             </div>
-            <div>
-                <button id="BtnDeExplore"> Explore recipes </button>
+            <div class="BtnExplore">
+                <a class="hrefExplore">Explore<br> recipes</a> 
 
             </div>
 
