I linked the explore button to the explore recipes page

--- a/Home.html
+++ b/Home.html
@@ -65,7 +65,7 @@
                 <img class="img" src="images/ropa4.jpg">
             </div>
             <div class="BtnExplore">
-                <a class="hrefExplore">Explore<br> recipes</a> 
+                  <a class="hrefExplore"  href="index.html">Explore<br> recipes</a>
 
             </div>
 
