add the footer icons

--- a/Home.html
+++ b/Home.html
@@ -86,9 +86,9 @@
         </div>
 
         <div class="icons">
-            <img src="/Cooking-Room-main/icons/email.png" alt="">
-            <img src="/Cooking-Room-main/icons/facebook.png" alt="">
-            <img src="/Cooking-Room-main/icons/twitter.png" alt="">
+            <img src="/icons/email.png" alt="">
+            <img src="icons/facebook.png" alt="">
+            <img src="icons/twitter.png" alt="">
         </div>
         
     </footer>
