--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="views">
-            <h1>You have <span id="all-views"></span> to Recipes Explore</h1>
+            <h1>You have <span id="all-views"> </span> to Recipes Explore</h1>
         </div>
     </div>
     <div class="pagin">
@@ -107,7 +107,12 @@
 
                     <input type="text" id="made_input" placeholder="Enter Description">
                       
-                        <input type="text" id="category" placeholder="Enter the category ">
+                    <select  id="category"  name="select" >
+                        <option value="Pasta" >Pasta</option>
+                        <option value="Pizza">Pizza</option>
+                        <option value="Chicken">Chiken</option>
+                        <option value="Salad">salade</option>
+                    </select>
 
                         <input type="text" id="user_input" placeholder="Enter your full-Name ">
 
